No commit message
svn path=/trunk/iCub/firmware/; revision=9842

--- a/loader56f807/ChangeLog
+++ b/loader56f807/ChangeLog
@@ -3,3 +3,4 @@
 	of changes made to the firmware. Keep track of the build
 	number, and if possible add a list of the files you 
 	modified.
+	* Current build 0.6.
