* fixed issue related to the execution of velocity commands during a position trajectory (used by saccades). * Implemented microsaccades in 4DC firmware version 2.15 * BLL Current build 60. * 4DC Current build 45.
svn path=/trunk/iCub/firmware/; revision=17724

--- a/motorControllerDsp56f807/2BLL/ChangeLog
+++ b/motorControllerDsp56f807/2BLL/ChangeLog
@@ -178,3 +178,7 @@
 	* fixed velocity timeout in impedance velocity control mode.
     * fixed position commands in torque control mode (now commands are ignored).	
 	* Current build 52.		
+    
+2012-16-May Marco Randazzo <marco.randazzo@iit.it>
+    * fixed issue related to the execution of velocity commands during a position trajectory.
+    * Current build 60.
