--- a/motorControllerDsp56f807/4DC/ChangeLog
+++ b/motorControllerDsp56f807/4DC/ChangeLog
@@ -139,5 +139,9 @@ In the struct canmsg_tag I have changed the CAN_data[16] in CAN_data[8]. I do no
 2012-16-May Marco Randazzo <marco.randazzo@iit.it>
 * fixed issue related to the execution of velocity commands during a position trajectory.
 * Current build 45.
+
+2012-04-Jun Marco Maggiali <marco.maggiali@iit.it>
+* update the version 1.29
+* Increase the build number to 46.
    
 
